crates/rpkl-runtime/tests/snapshots/snapshot_tests__mapping_get_or_null.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2
  },
  "r1": 1,
  "r2": null
}
