crates/rpkl-runtime/tests/snapshots/snapshot_tests__mapping_map.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2
  },
  "r1": {
    "a": 10,
    "b": 20
  }
}
