crates/rpkl-runtime/tests/snapshots/snapshot_tests__mapping_multiple_entries.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "config": {
    "key1": "value1",
    "key2": "value2",
    "key3": 42
  }
}
