crates/rpkl-runtime/tests/snapshots/snapshot_tests__mapping_with_computed_keys.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2191
expression: eval_pkl(source)
---
{
  "prefix": "key",
  "m": {
    "key_1": 10,
    "key_2": 20
  }
}
