crates/rpkl-runtime/tests/snapshots/snapshot_tests__mixed_int_float_arithmetic.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 3.5,
  "r2": 6.5,
  "r3": 10.0,
  "r4": 3.5,
  "r5": 3.5,
  "r6": 3.5,
  "r7": 7.0
}
